# Projekt-Softwareentwicklung-

./: CMakeCache.txt  CMakeList.txt  CMakeLists.txt  README.md  description.txt  run_cmake.sh  test.c
1_include/: developer.c  developer.h
2_src/: developer.c  main.c
Test/: BMI.c  Struct.c  While.c
doc/: description.txt
exam_4_code/src/: a.out
include/: developer.h  developer_group.h
src/: developer.c  developer_group.c  main.c
test/: main2  main2.c  test_1  test_1.c
